2003-06-05  Michael Snyder  <msnyder@redhat.com>

	* config/tc-h8sx.c (get_specific): Distinguish h8h from h8s ops.
	(build_bytes): Ditto.

2003-06-05  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-h8sx.c (DMODE): Remove.
	(colonmod24): Don't choose a default if the operand is a 16-bit
	constant integer.
	(fix_operand_size): New function.
	(md_assemble): Use it to choose between @(d:2, ERn) and @(d:16,ERn).
	Adjust @(d:2,ERn) operands before choosing the specific opcodes.

2003-06-05  Michal Ludvig  <mludvig@suse.cz>

	* dw2gencfi.c (cfi_add_CFA_insn, cfi_add_CFA_insn_reg)
	(cfi_add_CFA_insn_reg_reg, cfi_add_CFA_insn_reg_offset): New.
	(cfi_add_CFA_offset, cfi_add_CFA_def_cfa)
	(cfi_add_CFA_register, cfi_add_CFA_def_cfa_register)
	(cfi_add_CFA_def_cfa_offset): Use cfi_add_CFA_insn_*().
	(cfi_add_CFA_restore, cfi_add_CFA_undefined)
	(cfi_add_CFA_same_value, cfi_add_CFA_remember_state)
	(cfi_add_CFA_restore_state, cfi_add_CFA_nop): New.
	(cfi_pseudo_table): New directives .cfi_return_column,
	.cfi_restore, .cfi_undefined, .cfi_same_value,
	.cfi_remember_state, .cfi_restore_state, .cfi_nop.
	(dot_cfi, output_cfi_insn): Handle new directives.
	* dw2gencfi.h (cfi_add_CFA_restore, cfi_add_CFA_undefined)
	(cfi_add_CFA_same_value, cfi_add_CFA_remember_state)
	(cfi_add_CFA_restore_state, cfi_add_CFA_nop): New prototypes.

2003-06-04  Richard Henderson  <rth@redhat.com>

	* dw2gencfi.c (output_cfi_insn): Fix typo for negative offsets.

	* dw2gencfi.c (cfi_finish): Set .eh_frame read-only.

2003-06-04  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c (s_alpha_usepv): New.
	(md_pseudo_table): Add it.
	(alpha_cfi_frame_initial_instructions): New.
	* config/tc-alpha.h (TARGET_USE_CFIPOP): New.
	(tc_cfi_frame_initial_instructions): New.
	* doc/c-alpha.texi: Document .usepv.

2003-06-04  Jakub Jelinek  <jakub@redhat.com>

	* as.c (show_usage): Document --execstack and --noexecstack.
	(parse_args): Add --execstack and --noexecstack.